chore: modernize collection usage in multiple extensions